igrp-cloud-gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igrp-cloud-gateway
  labels:
    app: igrp-cloud-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: igrp-cloud-gateway
  template:
    metadata:
      labels:
        app: igrp-cloud-gateway
    spec:
      containers:
        - name: igrp-cloud-gateway
          image: registry.nosi.cv/igrp/igrp-cloud-gateway-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
