igrp-cloud-gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: igrp-cloud-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: portalunico-iam-manager-dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: igrp-cloud-gateway-service
                port:
                  number: 8080
